# attend

./: .editorconfig  .env.example  .gitignore  .replit  README.md  index.html  main.py  mapping.json  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
backend/api/: __init__.py  api.py  main.py
backend/core/: __init__.py  config.py
backend/engine/: __init__.py  attendance.py  chart.py  config.py  fetch.py  stream.py
frontend/telegram/: tg_bot.py
frontend/web/: bundle.min.js  i.js  index.html  manifest.json  mapping.json  script.js  style.css  style.min.css  sw.js
