[project]
name = "attend"
version = "0.1.0"
description = "Fetches attendance details from PESUAcademy, provides real-time logs, and supports multiple SRN formats and mappings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
]