[project]
name = "attend"
version = "0.1.0"
description = "Fetches attendance data from PESUAcademy, fancy graphs parses multiple SRN formats and subject mappings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
]
