[project]
name = "attend"
version = "0.1.0"
description = "Fetches attendance data from PESUAcademy, fancy graphs parses multiple SRN formats and subject mappings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.13.1",
    "matplotlib>=3.10.7",
    "telebot>=0.0.5",
    "rjsmin>=1.2.5",
    "rcssmin>=1.2.2",
    "colorama>=0.4.6",
    "uvicorn>=0.40.0",
]
